# proj-animals

./: CMakeLists.txt  README.md
include/: systems.hpp
include/core/: components.hpp  entity.hpp  events.hpp  system.hpp
include/editor/: components.hpp  system.hpp
include/entity/: builder.hpp
include/graphics/: components.hpp  events.hpp  system.hpp  texture.hpp
include/input/: components.hpp  events.hpp  system.hpp
include/physics/: components.hpp  events.hpp  system.hpp
include/serialization/: serialization.hpp  serialization_entt.hpp  serialization_sfml.hpp
include/ui/: builder.hpp  components.hpp  events.hpp  font.hpp  system.hpp
include/utility/: base64.hpp  constants.hpp  entity_builder.hpp  formatters.hpp  geom.hpp  math.hpp  utility.hpp
include/world/: components.hpp  systems.hpp
src/: main.cpp
src/core/: core.cpp  events.cpp
src/editor/: editor.cpp
src/graphics/: system.cpp
src/input/: system.cpp
src/physics/: system.cpp
src/serialization/: serialization.cpp  serialization_entt.cpp
src/ui/: ui.cpp  ui_allocators.cpp  ui_base.cpp  ui_elements.cpp  ui_handlers.cpp  ui_system.cpp
src/utility/: base64.cpp  geom.cpp  math.cpp  utility.cpp
src/world/: system.cpp
